--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^3.18.2",
+    "core-js": "^2.6.8",
     "cross-env": "^5.2.0",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
