--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "antd": "^3.18.2",
     "core-js": "^2.6.8",
     "cross-env": "^5.2.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
     "koa": "^2.7.0",
